# OtusBayan

./: .gitignore  CMakeLists.txt  README.md  README.txt  Readme.md  bayan-0.0.0-Linux.deb  bayan.cpp  hash_history.h  list_files.h  match_files.h  out.txt  program_options.h  readme.md
.github/workflows/: c-cpp.yml
